--- a/app/src/main/res/drawable-v23/rectangle_thumb.xml
+++ b/app/src/main/res/drawable-v23/rectangle_thumb.xml
@@ -23,7 +23,7 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#956280"/>
+            <solid android:color="#FF5252"/>
             <size
                 android:height="30dp"
                 android:width="40dp"/>
