--- a/app/src/main/res/drawable-v23/rectangle_track.xml
+++ b/app/src/main/res/drawable-v23/rectangle_track.xml
@@ -4,7 +4,7 @@
     <item android:state_checked="true">
 
         <shape android:shape="rectangle">
-            <solid android:color="#a1ebb0"/>
+            <solid android:color="#4CAF50"/>
 
             <corners android:radius="48dp"/>
 
