--- a/app/src/main/res/layout/activity_my_request.xml
+++ b/app/src/main/res/layout/activity_my_request.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyRequest"
-    android:background="@drawable/profile_backgroud">
+    tools:context=".MyRequest">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
@@ -18,7 +17,8 @@
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:layout_below="@id/customToolbar"/>
+           android:layout_below="@id/customToolbar"
+           android:layout_marginTop="4dp"/>
    </RelativeLayout>
 
 </FrameLayout>
