--- a/app/src/main/res/layout/donor_list.xml
+++ b/app/src/main/res/layout/donor_list.xml
@@ -9,11 +9,13 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:paddingStart="10dp"
-    android:paddingLeft="10dp"
+    android:paddingEnd="10dp"
     android:paddingBottom="10dp"
     android:paddingTop="6dp"
     android:layout_marginBottom="4dp"
-    android:background="@drawable/notification_back">
+    android:background="@drawable/notification_back"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,8 +45,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="49"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -53,8 +53,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -69,8 +67,6 @@
             android:id="@+id/gender_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -80,8 +76,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -98,9 +92,6 @@
             android:id="@+id/address_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="13sp"
             android:textStyle="bold"
             android:singleLine="true"/>
@@ -118,8 +109,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="13sp"
             android:textStyle="bold" />
     </LinearLayout>
