--- a/app/src/main/res/layout/fragment_donors.xml
+++ b/app/src/main/res/layout/fragment_donors.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DonorsFragment"
-    android:background="@drawable/profile_backgroud">
+    >
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"/>
 </FrameLayout>
