--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,6 @@
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="15dp"
-        android:background="@drawable/profile_backgroud"
         tools:context=".MainActivity">
 
         <LinearLayout
@@ -23,17 +22,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
-
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Name :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/name_text"
@@ -41,9 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -58,11 +53,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Gender :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/gender_text"
@@ -70,9 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -88,11 +80,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Birthday :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/birthday_text"
@@ -100,9 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -117,11 +106,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="BloodGroup :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/blood_text"
@@ -129,9 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -146,11 +132,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Address :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/address_text"
@@ -158,8 +143,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -175,11 +158,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Phone :"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
             <TextView
                 android:id="@+id/phone_text"
@@ -187,9 +169,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginLeft="6dp"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -206,11 +186,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:fontFamily="@font/courgette_regular"
                 android:text="Donor:"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
 
             <Switch
@@ -227,7 +206,8 @@
                 android:layout_weight="2"
                 android:layout_marginEnd="120dp"
                 android:layout_marginRight="120dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
 
 
         </LinearLayout>
@@ -239,10 +219,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/post_for_blood"
-                android:fontFamily="@font/courgette_regular"
-                android:textColor="#3d002e"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/sv_primary"/>
         </LinearLayout>
 
         <LinearLayout
@@ -256,20 +235,21 @@
                 android:id="@+id/blood"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="#ffffff">
+                android:background="@drawable/post_spinner">
 
             </Spinner>
 
             <Button
                 android:id="@+id/post_button"
                 android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="64dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="#3d002e"
                 android:background="@drawable/buttonshape"
                 android:text="Post"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 />
         </LinearLayout>
 
