--- a/app/src/main/res/layout/notificatiion_list.xml
+++ b/app/src/main/res/layout/notificatiion_list.xml
@@ -8,12 +8,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="10dp"
-    android:paddingLeft="10dp"
+    android:paddingEnd="10dp"
     android:paddingBottom="10dp"
     android:paddingTop="6dp"
     android:background="@drawable/notification_back"
     tools:context=".MainActivity"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="4dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp">
 
     <TextView
         android:id="@+id/phone_text"
@@ -33,9 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            android:fontFamily="@font/courgette_regular"
             android:singleLine="true"
-            android:textColor="#3d002e"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -44,9 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:fontFamily="@font/courgette_regular"
             android:singleLine="true"
-            android:textColor="#3d002e"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -60,8 +58,6 @@
             android:id="@+id/address_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -75,7 +71,6 @@
             android:id="@+id/distance_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#3d002e"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
