--- a/app/src/main/res/layout/request_list.xml
+++ b/app/src/main/res/layout/request_list.xml
@@ -6,7 +6,9 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@drawable/notification_back"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="4dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp">
 
 
 
@@ -22,8 +24,6 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
-            android:fontFamily="@font/courgette_regular"
-            android:textColor="#3d002e"
             android:textSize="16sp"
             android:textStyle="bold" />
 
