--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -170,8 +170,7 @@
             android:id="@+id/txtname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginLeft="22dp"
+            android:layout_marginStart="2dp"
             android:text="@string/full_name"
             android:textColor="@android:color/white"
             android:textSize="16sp"
@@ -191,7 +190,6 @@
                 android:layout_marginRight="18dp"
                 android:layout_weight="49"
                 android:alpha="0.5"
-                android:background="@drawable/textviewshape"
                 android:ems="10"
                 android:hint="@string/full_name"
                 android:singleLine="true"
@@ -238,8 +236,7 @@
             android:id="@+id/txtpass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginLeft="22dp"
+            android:layout_marginStart="2dp"
             android:text="@string/password"
             android:textColor="@android:color/white"
             android:textSize="16sp"
@@ -258,7 +255,6 @@
                 android:layout_marginRight="4dp"
                 android:layout_weight="49"
                 android:alpha="0.5"
-                android:background="@drawable/textviewshape"
                 android:ems="10"
                 android:hint="@string/password"
                 android:singleLine="true"
@@ -303,8 +299,7 @@
             android:id="@+id/txtdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginLeft="22dp"
+            android:layout_marginStart="2dp"
             android:text="@string/birthday"
             android:textColor="@android:color/white"
             android:textSize="16sp"
@@ -323,7 +318,6 @@
                 android:layout_marginRight="4dp"
                 android:layout_weight="49"
                 android:alpha="0.5"
-                android:background="@drawable/textviewshape"
                 android:editable="false"
                 android:ems="10"
                 android:hint="@string/birthday"
@@ -352,8 +346,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="114dp"
-        android:layout_marginLeft="114dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
         android:paddingStart="20dp"
@@ -364,15 +357,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.852">
+        app:layout_constraintTop_toBottomOf="@+id/linear3"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/txtblood"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginLeft="22dp"
+            android:layout_marginStart="2dp"
             android:text="@string/blood_group"
             android:textColor="@android:color/white"
             android:textSize="16sp"
@@ -384,12 +376,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="18dp"
-            android:layout_marginRight="18dp"
-            android:alpha="0.6"
-            android:background="@drawable/spinnerviewshpe"
-            android:dropDownSelector="#000"
+            android:background="#ffffff"
             android:ems="10"
-            android:popupBackground="@drawable/spinnerviewshpe"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             android:spinnerMode="dropdown"
             android:textColor="#fff"
             android:textColorHighlight="#fff"
