--- a/app/src/main/res/layout/spiner_item_lyout.xml
+++ b/app/src/main/res/layout/spiner_item_lyout.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/spinnerviewshpe">
-
-    <TextView
-        android:padding="10dp"
-        android:id="@+id/txtItem"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="18sp"
-        android:background="@drawable/spinnerviewshpe"
-        android:textColor="#fff"
-        android:textColorHighlight="#fff"
-        android:textColorHint="#fff"
-        android:textStyle="bold" />
-
-</LinearLayout>
+    android:layout_height="?android:attr/listPreferredItemHeightSmall"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:gravity="center_vertical"
+    android:checkMark="?android:attr/listChoiceIndicatorSingle"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />
